more bugs squashed

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
 
   main {
     background-color: #ECD2FF;
+    text-align: center;
     width: 1200px;
     margin: 0px auto;
     padding: 20px;
@@ -48,6 +49,7 @@ body {
 
   h2 {
     color: #14141E;
+    text-align: center;
     font-size: 40px;
     padding: 0px;
   }
